oqct-app/main/default/objects/Data_Clean_Success_Child__c/Data_Clean_Success_Child__c.object-meta.xml
<CustomObject>
    <description>This object will store the ids of the Successful child records</description>
    <label>Data Clean Success Child</label>
    <nameField>
        <displayFormat>DC-SC-{0000000000}</displayFormat>
        <label>Data Clean Success Child Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Clean Success Childs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>