oqct-app/main/default/objects/Data_Clean_Success_Child__c/fields/Child_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Name__c</fullName>
    <description>The name of the child object</description>
    <inlineHelpText>The name of the child object</inlineHelpText>
    <label>Child Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>