oqct-app/main/default/objects/Data_Clean_Success_Child__c/fields/Child_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Child_Record_Id__c</fullName>
    <description>The id of the record that succeeded</description>
    <inlineHelpText>The id of the record that succeeded</inlineHelpText>
    <label>Child Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>