oqct-app/main/default/objects/Data_Clean_Success_Child__c/fields/Data_Clean__c.field-meta.xml
<CustomField>
    <fullName>Data_Clean__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Data Clean record (which represents parent record) to which it is associated</description>
    <inlineHelpText>The Data Clean record (which represents parent record) to which it is associated</inlineHelpText>
    <label>Data Clean</label>
    <referenceTo>Data_Clean__c</referenceTo>
    <relationshipLabel>Data Clean Success Childs</relationshipLabel>
    <relationshipName>Data_Clean_Success_Childs</relationshipName>
    <type>Lookup</type>
</CustomField>