oqct-app/main/default/objects/Data_Clean_Success_Child__c/fields/Is_Process2__c.field-meta.xml
<CustomField>
    <fullName>Is_Process2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if it&apos;s the second action (Usually Deletion) in the configuration process</description>
    <inlineHelpText>Indicates if it&apos;s the second action (Usually Deletion) in the configuration process</inlineHelpText>
    <label>Is Process2</label>
    <type>Checkbox</type>
</CustomField>